--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app for hackathon",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anand Sinha, Anubhav Bansal, Sarthak Duggal",
   "license": "ISC",
@@ -23,7 +23,6 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6",
     "validator": "^13.1.17"
   }
 }
